Add Sqlite database and method canLogin

--- a/FoodApp/FoodApp/MainPage.xaml
+++ b/FoodApp/FoodApp/MainPage.xaml
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FoodApp.MainPage"
-             BackgroundColor="{StaticResource mainAppColor}">
-    <ContentPage.ToolbarItems>
+            xmlns:pages="clr-namespace:FoodApp.Pages"
+             BackgroundColor="{StaticResource mainAppColor}"
+            SelectedTabColor="Black">
+    <TabbedPage.ToolbarItems>
         <ToolbarItem Text="{Binding Email, Mode=TwoWay, StringFormat='Login As: {0}'}"/>
-    </ContentPage.ToolbarItems>
+    </TabbedPage.ToolbarItems>
 
-    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="Welcome to the Main Page!"/>
-    </StackLayout>
+    <pages:HistoryPage Title="History"/>
+    <pages:NewMealPage Title="Meals"/>
+    <pages:ProfilePage Title="Profile"/>
 
-</ContentPage>
+</TabbedPage>
