--- a/FoodApp/FoodApp/Pages/LoginPage.xaml
+++ b/FoodApp/FoodApp/Pages/LoginPage.xaml
@@ -13,7 +13,7 @@
 
             <Entry Placeholder="email"
                    Keyboard="Email"
-                   Text="{Binding Email, Mode=TwoWay}"/>
+                   Text="{Binding Email, StringFormat='{0}', Mode=TwoWay}"/>
 
             <Entry Placeholder="password"
                    IsPassword="True"
@@ -43,8 +43,6 @@
                         HeightRequest="35"
                         FontSize="12"
                         Command="{Binding GoToRegisterPageCommand}"/>
-
-                <Button Grid.Row="2" x:Name="TestButton" Clicked="TestButton_Clicked" Text="Test" Style="{StaticResource ButtonOfTypeCancel}"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
