--- a/FoodApp/FoodApp/Pages/HistoryPage.xaml
+++ b/FoodApp/FoodApp/Pages/HistoryPage.xaml
@@ -4,9 +4,13 @@
              x:Class="FoodApp.Pages.HistoryPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to History Page!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ListView ItemsSource="{Binding Posts}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding MealType}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
