add searchPage, and get results about food from service

--- a/FoodApp/FoodApp/Pages/MainPage.xaml
+++ b/FoodApp/FoodApp/Pages/MainPage.xaml
@@ -16,6 +16,7 @@
 
     <pages:HistoryPage Title="History"/>
     <pages:NewPostPage Title="Posts"/>
+    <pages:SearchPage Title="Search"/>
     <pages:ProfilePage Title="Profile"/>
 
 </TabbedPage>
